Fix unintended horizontal scroll on mobile devices (due to overflow in blog post header image)

--- a/_assets/scss/components/_blog-post.scss
+++ b/_assets/scss/components/_blog-post.scss
@@ -4,6 +4,7 @@
     background-color: #454545;
     height: auto;
     margin-bottom: 2rem;
+    overflow: hidden;
   }
   &__header-bg {
     position: absolute;
@@ -24,7 +25,6 @@
     // @include make-container()
     display: flex; // d-flex
     align-items: center; // align-items-center
-    margin-bottom: 2rem;
   }
   &__title,
   &__meta {
