--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8269,7 +8269,8 @@ footer {
   position: relative;
   background-color: #454545;
   height: auto;
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem;
+  overflow: hidden; }
 
 .blog-post__header-bg {
   position: absolute;
@@ -8292,8 +8293,7 @@ footer {
   display: flex;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center;
-  margin-bottom: 2rem; }
+  align-items: center; }
 
 .blog-post__title, .blog-post__meta {
   color: white; }
